--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -24,12 +24,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r backend/requirements.txt
+        pip install -r ask-alice-chatbot/requirements.txt
 
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
       with:
         app-name: ask-alice-chatbot
-        package: backend
+        package: ask-alice-chatbot
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+
 
