--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -24,14 +24,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ask-alice-chatbot/requirements.txt
+        pip install -r backennd/requirements.txt
 
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
       with:
         app-name: ask-alice-chatbot
-        package: ask-alice-chatbot
+        package: backend
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+
 
 
 
