--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r backennd/requirements.txt
+        pip install -r backend/requirements.txt
 
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
@@ -32,6 +32,7 @@ jobs:
         app-name: ask-alice-chatbot
         package: backend
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+
 
 
 
