--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -30,8 +30,9 @@ jobs:
       uses: Azure/functions-action@v1
       with:
         app-name: ask-alice-chatbot
-        package: ask-alice-chatbot
+        package: backend
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+
 
 
 
