--- a/.github/workflows/main_ask-alice-chatbot.yml
+++ b/.github/workflows/main_ask-alice-chatbot.yml
@@ -35,6 +35,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
+  run: pip install -r backend/requirements.txt
         
       # Optional: Add step to run tests here
 
@@ -81,6 +82,7 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
           
+
 
 
 
